samples/_failures_safe/1761211284_9c7438_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3fd5c59.c: In function ‘main’:
./samples/SAFE/__tmp_c3fd5c59.c:148:5: error: expected declaration or statement at end of input
  148 |     if (strcmp(input, "ALL") == 0) {
      |     ^~
./samples/SAFE/__tmp_c3fd5c59.c:148:5: error: expected declaration or statement at end of input
